# Salla-Merchant-Analytics-Command-Center

./: README.md
ai-assistant-service-lib/: .dockerignore  .env.example  .eslintrc.js  .gitignore  CODEOWNERS  README.md  jest.config.js  package.json  tsconfig.base.json  tsconfig.json  turbo.json  vercel.json
ai-assistant-service-lib/docs/: Code Design199.md  File Structure199.md  Integration Design199.md  Repository Description199.md  automation_roadmap.csv  (+23 more)
core-library/: .dockerignore  .editorconfig  .env.example  .eslintrc.js  .gitignore  jest.config.js  package.json  playwright.config.ts  tsconfig.json  turbo.json  vercel.json
data-pipeline-service/: .eslintrc.js  .gitignore  jest.config.js  package.json  tsconfig.json  turbo.json  vercel.json
database-schema/: .env.example  .eslintrc.json  .gitignore  docker-compose.yml  jest.config.js  package.json  tsconfig.json
integration-gateways/: .eslintrc.js  .gitignore  jest.config.base.js  package.json  tsconfig.base.json
salla-analytics-infra/: .editorconfig  .env.example  .eslintrc.json  .gitattributes  .gitignore  .prettierrc  docker-compose.yml  jest.config.js  package.json  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
salla-analytics-infra/services/rust-worker-placeholder/: Cargo.toml
salla-analytics-pwa-main/: .env.example  .eslintrc.json  jest.config.ts  jest.setup.ts  next.config.mjs  package.json  playwright.config.ts  tailwind.config.ts  vercel.json
ui-components/: .editorconfig  .gitattributes  .gitignore  .prettierrc  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+616 files in other folders)
